{
  "version": 4,
  "terraform_version": "1.6.6",
  "serial": 836,
  "lineage": "7de16b8b-a126-c2e7-6242-5fcf2d9d3975",
  "resources": [
    {
      "module": "module.network_interface",
      "mode": "data",
      "type": "azurerm_subnet",
      "name": "subnet-data-blk",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "index_key": "nic1",
          "schema_version": 0,
          "attributes": {
            "address_prefix": "10.0.0.0/25",
            "address_prefixes": [
              "10.0.0.0/25"
            ],
            "default_outbound_access_enabled": true,
            "id": "/subscriptions/8be7a0f4-188c-49e3-82b6-c75d12632382/resourceGroups/prod_rg/providers/Microsoft.Network/virtualNetworks/Prod_Vnet/subnets/elern_frontend",
            "name": "elern_frontend",
            "private_endpoint_network_policies": "Disabled",
            "private_link_service_network_policies_enabled": true,
            "resource_group_name": "prod_rg",
            "virtual_network_name": "Prod_Vnet"
          }
        },
        {
          "index_key": "nic2",
          "schema_version": 0,
          "attributes": {
            "address_prefix": "10.0.0.128/26",
            "address_prefixes": [
              "10.0.0.128/26"
            ],
            "default_outbound_access_enabled": true,
            "id": "/subscriptions/8be7a0f4-188c-49e3-82b6-c75d12632382/resourceGroups/prod_rg/providers/Microsoft.Network/virtualNetworks/Prod_Vnet/subnets/elern_backend",
            "name": "elern_backend",
            "private_endpoint_network_policies": "Disabled",
            "private_link_service_network_policies_enabled": true,
            "resource_group_name": "prod_rg",
            "virtual_network_name": "Prod_Vnet"
          }
        }
      ]
    },
    {
      "module": "module.network_interface",
      "mode": "managed",
      "type": "azurerm_network_interface",
      "name": "nic_blk",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "index_key": "nic1",
          "schema_version": 0,
          "attributes": {
            "accelerated_networking_enabled": false,
            "id": "/subscriptions/8be7a0f4-188c-49e3-82b6-c75d12632382/resourceGroups/prod_rg/providers/Microsoft.Network/networkInterfaces/elrarn-frontend-nic",
            "internal_domain_name_suffix": "pkh0ubniay1urljriojog3jake.rx.internal.cloudapp.net",
            "ip_configuration": [
              {
                "name": "elrarn-frontend-nic",
                "primary": true,
                "private_ip_address": "10.0.0.4",
                "private_ip_address_allocation": "Dynamic",
                "private_ip_address_version": "IPv4",
                "subnet_id": "/subscriptions/8be7a0f4-188c-49e3-82b6-c75d12632382/resourceGroups/prod_rg/providers/Microsoft.Network/virtualNetworks/Prod_Vnet/subnets/elern_frontend"
              }
            ],
            "ip_forwarding_enabled": false,
            "location": "centralindia",
            "name": "elrarn-frontend-nic",
            "private_ip_address": "10.0.0.4",
            "private_ip_addresses": [
              "10.0.0.4"
            ],
            "resource_group_name": "prod_rg"
          },
          "dependencies": [
            "module.network_interface.data.azurerm_subnet.subnet-data-blk",
            "module.rg-module.azurerm_resource_group.rg-blk",
            "module.subnet_module.azurerm_subnet.subnet_blk",
            "module.vnet_module.azurerm_virtual_network.vnet-blk"
          ]
        },
        {
          "index_key": "nic2",
          "schema_version": 0,
          "attributes": {
            "accelerated_networking_enabled": false,
            "id": "/subscriptions/8be7a0f4-188c-49e3-82b6-c75d12632382/resourceGroups/prod_rg/providers/Microsoft.Network/networkInterfaces/elrarn-backend-nic",
            "internal_domain_name_suffix": "pkh0ubniay1urljriojog3jake.rx.internal.cloudapp.net",
            "ip_configuration": [
              {
                "name": "elrarn-frontend-nic",
                "primary": true,
                "private_ip_address": "10.0.0.132",
                "private_ip_address_allocation": "Dynamic",
                "private_ip_address_version": "IPv4",
                "subnet_id": "/subscriptions/8be7a0f4-188c-49e3-82b6-c75d12632382/resourceGroups/prod_rg/providers/Microsoft.Network/virtualNetworks/Prod_Vnet/subnets/elern_backend"
              }
            ],
            "ip_forwarding_enabled": false,
            "location": "centralindia",
            "name": "elrarn-backend-nic",
            "private_ip_address": "10.0.0.132",
            "private_ip_addresses": [
              "10.0.0.132"
            ],
            "resource_group_name": "prod_rg"
          },
          "dependencies": [
            "module.network_interface.data.azurerm_subnet.subnet-data-blk",
            "module.rg-module.azurerm_resource_group.rg-blk",
            "module.subnet_module.azurerm_subnet.subnet_blk",
            "module.vnet_module.azurerm_virtual_network.vnet-blk"
          ]
        }
      ]
    },
    {
      "module": "module.nsg-asso",
      "mode": "data",
      "type": "azurerm_network_security_group",
      "name": "nsg-data-blk",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "index_key": "nsg_asso1",
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/8be7a0f4-188c-49e3-82b6-c75d12632382/resourceGroups/prod_rg/providers/Microsoft.Network/networkSecurityGroups/https",
            "location": "centralindia",
            "name": "https",
            "resource_group_name": "prod_rg",
            "security_rule": [
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "*",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "https_allowed",
                "priority": 100,
                "protocol": "Tcp",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              }
            ],
            "tags": {},
            "timeouts": null
          },
          "sensitive_attributes": []
        },
        {
          "index_key": "nsg_asso2",
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/8be7a0f4-188c-49e3-82b6-c75d12632382/resourceGroups/prod_rg/providers/Microsoft.Network/networkSecurityGroups/ftp",
            "location": "centralindia",
            "name": "ftp",
            "resource_group_name": "prod_rg",
            "security_rule": [
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "*",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "ftp_block",
                "priority": 100,
                "protocol": "Tcp",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              }
            ],
            "tags": {},
            "timeouts": null
          },
          "sensitive_attributes": []
        }
      ]
    },
    {
      "module": "module.nsg-asso",
      "mode": "data",
      "type": "azurerm_subnet",
      "name": "subnet-data-blk",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "index_key": "nsg_asso1",
          "schema_version": 0,
          "attributes": {
            "address_prefix": "10.0.0.0/25",
            "address_prefixes": [
              "10.0.0.0/25"
            ],
            "default_outbound_access_enabled": true,
            "id": "/subscriptions/8be7a0f4-188c-49e3-82b6-c75d12632382/resourceGroups/prod_rg/providers/Microsoft.Network/virtualNetworks/Prod_Vnet/subnets/elern_frontend",
            "name": "elern_frontend",
            "private_endpoint_network_policies": "Disabled",
            "private_link_service_network_policies_enabled": true,
            "resource_group_name": "prod_rg",
            "virtual_network_name": "Prod_Vnet"
          }
        },
        {
          "index_key": "nsg_asso2",
          "schema_version": 0,
          "attributes": {
            "address_prefix": "10.0.0.128/26",
            "address_prefixes": [
              "10.0.0.128/26"
            ],
            "default_outbound_access_enabled": true,
            "id": "/subscriptions/8be7a0f4-188c-49e3-82b6-c75d12632382/resourceGroups/prod_rg/providers/Microsoft.Network/virtualNetworks/Prod_Vnet/subnets/elern_backend",
            "name": "elern_backend",
            "private_endpoint_network_policies": "Disabled",
            "private_link_service_network_policies_enabled": true,
            "resource_group_name": "prod_rg",
            "virtual_network_name": "Prod_Vnet"
          }
        }
      ]
    },
    {
      "module": "module.nsg-asso",
      "mode": "managed",
      "type": "azurerm_subnet_network_security_group_association",
      "name": "nsg-asso",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "index_key": "nsg_asso1",
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/8be7a0f4-188c-49e3-82b6-c75d12632382/resourceGroups/prod_rg/providers/Microsoft.Network/virtualNetworks/Prod_Vnet/subnets/elern_frontend",
            "network_security_group_id": "/subscriptions/8be7a0f4-188c-49e3-82b6-c75d12632382/resourceGroups/prod_rg/providers/Microsoft.Network/networkSecurityGroups/https",
            "subnet_id": "/subscriptions/8be7a0f4-188c-49e3-82b6-c75d12632382/resourceGroups/prod_rg/providers/Microsoft.Network/virtualNetworks/Prod_Vnet/subnets/elern_frontend"
          },
          "dependencies": [
            "module.nsg-asso.data.azurerm_network_security_group.nsg-data-blk",
            "module.nsg-asso.data.azurerm_subnet.subnet-data-blk",
            "module.nsg_module.azurerm_network_security_group.nsg-blk",
            "module.rg-module.azurerm_resource_group.rg-blk",
            "module.subnet_module.azurerm_subnet.subnet_blk",
            "module.vnet_module.azurerm_virtual_network.vnet-blk"
          ]
        },
        {
          "index_key": "nsg_asso2",
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/8be7a0f4-188c-49e3-82b6-c75d12632382/resourceGroups/prod_rg/providers/Microsoft.Network/virtualNetworks/Prod_Vnet/subnets/elern_backend",
            "network_security_group_id": "/subscriptions/8be7a0f4-188c-49e3-82b6-c75d12632382/resourceGroups/prod_rg/providers/Microsoft.Network/networkSecurityGroups/ftp",
            "subnet_id": "/subscriptions/8be7a0f4-188c-49e3-82b6-c75d12632382/resourceGroups/prod_rg/providers/Microsoft.Network/virtualNetworks/Prod_Vnet/subnets/elern_backend"
          },
          "dependencies": [
            "module.nsg-asso.data.azurerm_network_security_group.nsg-data-blk",
            "module.nsg-asso.data.azurerm_subnet.subnet-data-blk",
            "module.nsg_module.azurerm_network_security_group.nsg-blk",
            "module.rg-module.azurerm_resource_group.rg-blk",
            "module.subnet_module.azurerm_subnet.subnet_blk",
            "module.vnet_module.azurerm_virtual_network.vnet-blk"
          ]
        }
      ]
    },
    {
      "module": "module.nsg_module",
      "mode": "managed",
      "type": "azurerm_network_security_group",
      "name": "nsg-blk",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "index_key": "nsg1",
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/8be7a0f4-188c-49e3-82b6-c75d12632382/resourceGroups/prod_rg/providers/Microsoft.Network/networkSecurityGroups/https",
            "location": "centralindia",
            "name": "https",
            "resource_group_name": "prod_rg",
            "security_rule": [
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "*",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "https_allowed",
                "priority": 100,
                "protocol": "Tcp",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              }
            ],
            "tags": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.rg-module.azurerm_resource_group.rg-blk"
          ]
        },
        {
          "index_key": "nsg2",
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/8be7a0f4-188c-49e3-82b6-c75d12632382/resourceGroups/prod_rg/providers/Microsoft.Network/networkSecurityGroups/ftp",
            "location": "centralindia",
            "name": "ftp",
            "resource_group_name": "prod_rg",
            "security_rule": [
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "*",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "ftp_block",
                "priority": 100,
                "protocol": "Tcp",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              }
            ],
            "tags": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.rg-module.azurerm_resource_group.rg-blk"
          ]
        }
      ]
    },
    {
      "module": "module.pip",
      "mode": "managed",
      "type": "azurerm_public_ip",
      "name": "pip-blk",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "index_key": "pip1",
          "schema_version": 0,
          "attributes": {
            "allocation_method": "Static",
            "ddos_protection_mode": "VirtualNetworkInherited",
            "id": "/subscriptions/8be7a0f4-188c-49e3-82b6-c75d12632382/resourceGroups/prod_rg/providers/Microsoft.Network/publicIPAddresses/elaran_frontend_pip",
            "idle_timeout_in_minutes": 4,
            "ip_address": "74.225.145.121",
            "ip_version": "IPv4",
            "location": "centralindia",
            "name": "elaran_frontend_pip",
            "resource_group_name": "prod_rg",
            "sku": "Standard",
            "sku_tier": "Regional"
          },
          "dependencies": [
            "module.rg-module.azurerm_resource_group.rg-blk"
          ]
        },
        {
          "index_key": "pip2",
          "schema_version": 0,
          "attributes": {
            "allocation_method": "Static",
            "ddos_protection_mode": "VirtualNetworkInherited",
            "id": "/subscriptions/8be7a0f4-188c-49e3-82b6-c75d12632382/resourceGroups/prod_rg/providers/Microsoft.Network/publicIPAddresses/elaran_backend_pip",
            "idle_timeout_in_minutes": 4,
            "ip_address": "4.213.98.115",
            "ip_version": "IPv4",
            "location": "centralindia",
            "name": "elaran_backend_pip",
            "resource_group_name": "prod_rg",
            "sku": "Standard",
            "sku_tier": "Regional"
          },
          "dependencies": [
            "module.rg-module.azurerm_resource_group.rg-blk"
          ]
        }
      ]
    },
    {
      "module": "module.subnet_module",
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "subnet_blk",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "index_key": "sub1",
          "schema_version": 0,
          "attributes": {
            "address_prefixes": [
              "10.0.0.0/25"
            ],
            "default_outbound_access_enabled": true,
            "id": "/subscriptions/8be7a0f4-188c-49e3-82b6-c75d12632382/resourceGroups/prod_rg/providers/Microsoft.Network/virtualNetworks/Prod_Vnet/subnets/elern_frontend",
            "name": "elern_frontend",
            "private_endpoint_network_policies": "Disabled",
            "private_link_service_network_policies_enabled": true,
            "resource_group_name": "prod_rg",
            "virtual_network_name": "Prod_Vnet"
          },
          "dependencies": [
            "module.rg-module.azurerm_resource_group.rg-blk",
            "module.vnet_module.azurerm_virtual_network.vnet-blk"
          ]
        },
        {
          "index_key": "sub2",
          "schema_version": 0,
          "attributes": {
            "address_prefixes": [
              "10.0.0.128/26"
            ],
            "default_outbound_access_enabled": true,
            "id": "/subscriptions/8be7a0f4-188c-49e3-82b6-c75d12632382/resourceGroups/prod_rg/providers/Microsoft.Network/virtualNetworks/Prod_Vnet/subnets/elern_backend",
            "name": "elern_backend",
            "private_endpoint_network_policies": "Disabled",
            "private_link_service_network_policies_enabled": true,
            "resource_group_name": "prod_rg",
            "virtual_network_name": "Prod_Vnet"
          },
          "dependencies": [
            "module.rg-module.azurerm_resource_group.rg-blk",
            "module.vnet_module.azurerm_virtual_network.vnet-blk"
          ]
        },
        {
          "index_key": "sub3",
          "schema_version": 0,
          "attributes": {
            "address_prefixes": [
              "10.0.0.192/26"
            ],
            "default_outbound_access_enabled": true,
            "id": "/subscriptions/8be7a0f4-188c-49e3-82b6-c75d12632382/resourceGroups/prod_rg/providers/Microsoft.Network/virtualNetworks/Prod_Vnet/subnets/elern_free_Subnet",
            "name": "elern_free_Subnet",
            "private_endpoint_network_policies": "Disabled",
            "private_link_service_network_policies_enabled": true,
            "resource_group_name": "prod_rg",
            "virtual_network_name": "Prod_Vnet"
          },
          "dependencies": [
            "module.rg-module.azurerm_resource_group.rg-blk",
            "module.vnet_module.azurerm_virtual_network.vnet-blk"
          ]
        }
      ]
    },
    {
      "module": "module.virtual_machine",
      "mode": "data",
      "type": "azurerm_network_interface",
      "name": "nic-data-block",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "index_key": "Backend_vm",
          "schema_version": 0,
          "attributes": {
            "accelerated_networking_enabled": false,
            "id": "/subscriptions/8be7a0f4-188c-49e3-82b6-c75d12632382/resourceGroups/prod_rg/providers/Microsoft.Network/networkInterfaces/elrarn-backend-nic",
            "ip_configuration": [
              {
                "name": "elrarn-frontend-nic",
                "primary": true,
                "private_ip_address": "10.0.0.132",
                "private_ip_address_allocation": "Dynamic",
                "private_ip_address_version": "IPv4",
                "subnet_id": "/subscriptions/8be7a0f4-188c-49e3-82b6-c75d12632382/resourceGroups/prod_rg/providers/Microsoft.Network/virtualNetworks/Prod_Vnet/subnets/elern_backend"
              }
            ],
            "ip_forwarding_enabled": false,
            "location": "centralindia",
            "name": "elrarn-backend-nic",
            "private_ip_address": "10.0.0.132",
            "private_ip_addresses": [
              "10.0.0.132"
            ],
            "resource_group_name": "prod_rg"
          }
        },
        {
          "index_key": "Frontend_vm",
          "schema_version": 0,
          "attributes": {
            "accelerated_networking_enabled": false,
            "id": "/subscriptions/8be7a0f4-188c-49e3-82b6-c75d12632382/resourceGroups/prod_rg/providers/Microsoft.Network/networkInterfaces/elrarn-frontend-nic",
            "ip_configuration": [
              {
                "name": "elrarn-frontend-nic",
                "primary": true,
                "private_ip_address": "10.0.0.4",
                "private_ip_address_allocation": "Dynamic",
                "private_ip_address_version": "IPv4",
                "subnet_id": "/subscriptions/8be7a0f4-188c-49e3-82b6-c75d12632382/resourceGroups/prod_rg/providers/Microsoft.Network/virtualNetworks/Prod_Vnet/subnets/elern_frontend"
              }
            ],
            "ip_forwarding_enabled": false,
            "location": "centralindia",
            "name": "elrarn-frontend-nic",
            "private_ip_address": "10.0.0.4",
            "private_ip_addresses": [
              "10.0.0.4"
            ],
            "resource_group_name": "prod_rg"
          }
        }
      ]
    },
    {
      "module": "module.vnet_module",
      "mode": "managed",
      "type": "azurerm_virtual_network",
      "name": "vnet-blk",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "index_key": "vnet1",
          "schema_version": 0,
          "attributes": {
            "address_space": [
              "10.0.0.0/24"
            ],
            "flow_timeout_in_minutes": 0,
            "guid": "05aa8f7a-06a8-4837-ad31-4392e3752054",
            "id": "/subscriptions/8be7a0f4-188c-49e3-82b6-c75d12632382/resourceGroups/prod_rg/providers/Microsoft.Network/virtualNetworks/Prod_Vnet",
            "location": "centralindia",
            "name": "Prod_Vnet",
            "private_endpoint_vnet_policies": "Disabled",
            "resource_group_name": "prod_rg"
          },
          "dependencies": [
            "module.rg-module.azurerm_resource_group.rg-blk"
          ]
        }
      ]
    }
  ]
}